--- a/Rekopis/index.html
+++ b/Rekopis/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Rękopis</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="author" content="Szymon Mrozowski">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css">
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script src="../Java/jscript.js"></script>
