--- a/Rekopis/index.html
+++ b/Rekopis/index.html
@@ -6,7 +6,7 @@
     <title>Rękopis</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Szymon Mrozowski">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="main.css"/>
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script src="../Java/jscript.js"></script>
     <script src="main.js"></script>
@@ -60,7 +60,7 @@
         <section class="pierwszy">
 
             <h1 id="pierwszy">Dzień pierwszy</h1>
-            <img class="LeftPicture anims animsLeft"src="Pictures/Hrabia.jpg" alt="Hrabia">
+            <img class="LeftPicture anims animsLeft" src="Pictures/Hrabia.jpg" alt="Hrabia">
             <p class="anims animsRight">Hrabia Olavidez jeszcze nie był sprowadził osadników do gór Sierra Morena. Strome to pasmo, które oddziela Andaluzję od Manszy, zamieszkiwali wówczas kontrabandziści, rozbójnicy i kilku Cyganów, o których mówiono, że pożerają ciała zabitych wędrowców. Stąd nawet poszło hiszpańskie przysłowie:</p>
 
             <p class="anims animsRight">Las gitanas de Sierra Morena quieren carne de hombres. Nie dość na tym. Podróżny, który odważył się zapuścić w tę dziką okolicę, napastowany bywał, jak mówiono, przez tysiączne okropności, na których widok drżała najzimniejsza odwaga. Słyszał płaczliwe głosy mieszające się z hukiem potoków, śród poświstu burzy mamiły go błędne ogniki, a niewidzialne ręce popychały w bezdenne przepaście.</p>
@@ -81,7 +81,7 @@
             <p>Ale właśnie gdy zbliżaliśmy się do Korkowych Dębów i wspominałem Lopezowi o potrzebie posiłku, spostrzegłem, że Moskito znikł nam wraz z mułem, objuczonym wszystkimi zapasami. Lopez odrzekł mi, że mulnik pozostał kilka staj za nami, aby poprawić coś przy jukach. Czekaliśmy na niego, postąpiliśmy kilka kroków naprzód, potem znowu zatrzymaliśmy się, wołaliśmy, wróciliśmy tą samą drogą, aby go wynaleźć, ale wszystko na próżno.</p>
 
             <p>Moskito znikł i uniósł z sobą nasze najdroższe nadzieje, to jest cały nasz obiad. Ja sam tylko byłem na czczo, Lopez bowiem przez cały czas zajadał ser z Toboso, który wziął ze sobą na drogę, mimo to jednak bynajmniej nie był weselszy ode mnie i mruczał przez zęby, że gospodarz z Andujar miał słuszność i że pewnie złe duchy porwały biednego Moskita.</p>
-            <img class="RightPicture anims animsRight" src="Pictures/saksonia.jpg" alt="Painting XVIII">
+            <img class="RightPicture anims animsRight" src="Pictures/saksonia.jpg" alt="Painting XVIII"/>
             <p class="anims animsLeft">Przybywszy do Los Alcornoques, ujrzałem przy źródle koszyk nakryty winnym liściem: musiały w nim być owoce, zapomniane przez jakiegoś podróżnego. Ciekawie pogrążyłem weń rękę i z przyjemnością znalazłem cztery piękne figi i pomarańczę. Ofiarowałem dwie figi Lopezowi, ale podziękował mi. mówiąc, że może zaczekać do wieczora. Zjadłem więc sam wszystko i następnie chciałem napić się wody ze źródła. Lopez wstrzymał mnie, dowodząc, że woda szkodzi po owocach, i podał mi trochę pozostałego mu jeszcze alikantu. Przyjąłem poczęstunek, ale zaledwie uczułem wino w żołądku, gdym doznał nagłego ściśnienia serca. Niebo i ziemia zakręciły mi się przed oczyma i byłbym niezawodnie zemdlał, gdyby Lopez nie był mi pośpieszył na pomoc. Otrzeźwił mnie, mówiąc, że nie powinienem się dziwić i że stan ten pochodził z czczości i znużenia. W istocie, nie tylko odzyskałem siły, ale nawet czułem się w stanie nadzwyczajnego podniecenia. Okolica zdawała się połyskiwać tysiącznymi barwami, przedmioty zaiskrzyły się w mych oczach, jak gwiazdy podczas letniej nocy, i krew zaczęła mi bić gwałtownie, zwłaszcza na szyi i skroniach.</p>
 
         </section>
@@ -161,7 +161,7 @@
         </section>
         <section class="Opetany">
             <h1 id="o_paszeko">HISTORIA <i>OPĘTANEGO</i> PASZEKO</h1>
-            <img class="LeftPicture anims animsLeft" src="Pictures/p1.jpg" alt="Painting XVIII">
+            <img class="LeftPicture anims animsLeft" src="Pictures/p1.jpg" alt="Painting XVIII"/>
             <p class="anims animsRight">Urodziłem się w Kordowie, gdzie ojciec mój żył w dobrobycie. Matka moja przed trzema laty umarła. Ojciec z początku zdawał się niepocieszony, ale gdy po kilku miesiącach wypadło mu jechać do Sewilli, zakochał się tam w młodej wdowie nazwiskiem Kamilla de Tormes. Kobieta ta nie używała dobrej sławy i przyjaciele mego ojca starali się odwrócić go od tej znajomości; ale właśnie, jakby im na przekorę, ojciec ożenił się z nią we dwa lata po śmierci pierwszej żony. Ślub odbył się w Sewilli i w kilka dni potem ojciec mój wrócił do Kordowy z nową małżonką i siostrą jej, Inezillą.</p>
             
             <p>Moja macocha zupełnie odpowiadała wieściom, jakie o niej krążyły. Przybywszy do naszego domu. zaczęła rzucać na mnie czułe spojrzenia. Nie powiódł się jej ten zamiar, natomiast ja szalenie zakochałem się w jej siostrze, Inezilli. Namiętność moja wkrótce tak się wzmogła, że upadłem ojcu do nóg i błagałem, aby mi ją dał za żonę. Ojciec podniósł mnie z dobrocią i rzekł:</p>
